# matcha

./: .gitignore  README.md  pyproject.toml
matcha/matcha/: __init__.py  api.py  cli.py  detector.py  engine.py  formatter.py  llm.py  parser.py  walker.py
rules/api/: mass_assignment.yaml  rate_limiting.yaml  swagger_exposed.yaml
rules/auth/: fallback_secret.yaml  hardcoded_credentials.yaml  hardcoded_jwt_secret.yaml  jwt_expiry_missing.yaml  jwt_none_algorithm.yaml
rules/crypto/: ecb_mode.yaml  hardcoded_iv.yaml  math_random_security.yaml  weak_hash.yaml
rules/injection/: command_injection.yaml  eval_usage.yaml  insecure_deserialization.yaml  nosql_injection.yaml  path_traversal.yaml  prototype_pollution.yaml  sql_injection.yaml
rules/logging/: error_stack_exposure.yaml  sensitive_logging.yaml
rules/web/: dangerous_innerhtml.yaml  env_exposure.yaml  insecure_cookie.yaml  insecure_cors.yaml  missing_csrf.yaml  open_redirect.yaml  regex_dos.yaml  security_headers.yaml  ssrf.yaml  unsafe_file_upload.yaml  xss_response.yaml
tests/: test_matcha.py
tests/fixtures/: command_injection.ts  component.tsx  insecure_cookie.ts  jwt_expiry_missing.ts  mass_assignment.ts  nest.ts  nosql.ts  open_redirect.ts  regex_dos.ts  ssrf.ts  swagger.ts  typeorm_query.ts  unsafe_upload.ts  vulnerable.ts  weak_secret.ts
tests/fixtures/configured_project/: .matcha.yaml  service.ts
tests/fixtures/gitignore_root_slash/: service.ts
tests/fixtures/nest_cookie_project/: controller.ts  main.ts
tests/fixtures/nest_dev_cors_project/: main.ts
(+1 files in other folders)
